# adbus

./: CMakeLists.txt  concepts.hpp  context.hpp  main.cpp  message_header.hpp  meta.hpp  name.hpp  path.hpp  protocol.hpp  signature.hpp  string_view_join.hpp
cmake/: CPM.cmake
include/adbus/core/: context.hpp  options.hpp
include/adbus/protocol/: message_header.hpp  meta.hpp  methods.hpp  name.hpp  padding.hpp  path.hpp  read.hpp  signature.hpp  write.hpp
include/adbus/util/: concepts.hpp  string_literal.hpp
test/: CMakeLists.txt  common.hpp  message_header_test.cpp  path_test.cpp  read_test.cpp  signature_test.cpp  write_test.cpp
tuplet/: format.hpp  tuplet.hpp
